# mugna-django-training

./: db.sqlite3  pyproject.toml
exercises/: admin.py  forms.py  middleware.py  models.py  views.py
exercises/management/commands/: import_books.py
exercises/migrations/: 0001_initial.py  0002_remove_classification_book_alter_author_email_and_more.py  0003_author_user.py  0004_alter_author_user.py  0005_alter_author_email.py
exercises/templates/: author_detail.html  author_form.html  author_list.html  author_search.html  base.html  book_detail.html  book_list.html  book_update.html  classification_detail.html  classification_list.html  crud_results.html  math.html  publisher_detail.html  publisher_form.html  publisher_list.html  publisher_search.html  search_history.html  user_logout.html
exercises/tests/: test_add_content.py  test_delete_content.py  tests.py
mysite/: settings.py  urls.py
templates/: author_detail.html  author_list.html  base.html  book_list.html  classification_detail.html  valid_date.html
